@@ -70,8 +70,9 @@ function snmp_explorer() {
 		    $data = explode(': ',$snmp);
 		    $keydata = explode('::',$key);
 		    $keydata2 = explode('.',$keydata[1]);
-		
-		    if(!isset($keydata2[1])) {
+			
+			// Avoid results without index and interfaces without name
+		    if(!isset($keydata2[1]) || !isset($data[1])) {
 			    continue;
 		    }
 		
